# clubbi-case

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: exceptions.py  main.py
app/db/: connection.py  seed_database.py
app/dependencies/: cart_dependencies.py  catalog_dependencies.py  checkout_dependencies.py
app/exceptions/: cart_exceptions.py
app/models/: cart.py  cart_item.py  client.py  offer.py  payment.py  product.py
app/routers/: cart_router.py  carts_router.py  catalog_router.py  checkout_router.py
app/schemas/: cart_items_schema.py  cart_schema.py  carts_schema.py  clients_schema.py  offers_schema.py  payment_schema.py  products_schema.py
app/services/cart_service/: CartService.py
app/services/catalog/: CatalogService.py
app/services/catalog_service/: CatalogService.py
app/services/checkout_service/: CheckoutService.py
docs/: technical-decisions.md
