[project]
name = "clubbi-case"
version = "0.1.0"
description = ""
authors = [
    {name = "Joao",email = "joao.ribeiro@e-deploy.com.br"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.6,<0.129.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
